# my_linux_from_scratch

./: README.md  config-6.7.4  package_patch_list.toml  pyproject.toml  system_package_list.toml
scripts/: prepare_dir.sh
scripts/download_system_package/: download_system_package.py
