[project]
name = "LFS"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "aetherrootr", email = "aether@aetherrootr.com"},
]
dependencies = [
    "wgetter>=0.7",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
download_system_package = "scripts/download_system_package/download_system_package.py"
